--- a/index.css
+++ b/index.css
@@ -5,9 +5,7 @@
 
     height: auto;
 }
-.first > div{
-    border: 1px solid red;
-}
+
 .first > div > img{
     width: 100%;
     height: 100%;
@@ -104,7 +102,7 @@
 }
 .sec-box > div{
     /* height: 100%; */
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     justify-content: center;
     
    
@@ -146,6 +144,84 @@ hr{
 .same > h5 + p{
     color: white;
 }
+.third{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    text-align: center;
+}
+.third > div{
+    border: 1px solid black;
+}
+.third > div > img{
+    height: 60px;
+    width: 60px;
+    padding: 10px;
+    
+}
+
+
+.one{
+    background-color: rgb(235,175,79);
+    color: whitesmoke;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.one > p{
+    width: 90%;
+    margin: auto;
+    font-size: 20px;
+    padding: 10px
+}
+.two{
+    background-color: rgb(251,104,61);
+    color: whitesmoke;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.two > p{
+    width: 90%;
+    margin: auto;
+    font-size: 20px;
+    padding: 10px
+
+    
+}
+.three{
+    background-color: rgb(22,22,22);
+    color: whitesmoke;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.three > p{
+    width: 90%;
+    margin: auto;
+    font-size: 20px;
+    padding: 10px
+
+    
+}
+.four > p{
+    width: 90%;
+    margin: auto;
+    font-size: 20px;
+    padding: 10px
+
+    
+}
+/* 
+.one >  h3 {
+    color: whitesmoke;
+}
+.one >  h3 + p {
+    color: whitesmoke;
+}
+.one + div{
+    background-color: rgb(251,104,61);
+}
+
+.thi{
+    background-color: rgb(22,22,22);
+} */
+
+
 @media (min-width: 400px) and (max-width: 700px){
     .first{
 
@@ -159,6 +235,7 @@ hr{
         height: 100%;
         justify-content: center;
         margin: auto;
+        
         
         
     }
@@ -180,6 +257,12 @@ hr{
         flex-direction: column;
         margin-bottom: -400px;
        
+    }
+    .third{
+        
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        
     }
     
 }
@@ -218,5 +301,11 @@ hr{
         flex-direction: column;
         margin-bottom: -400px;
        
+    }
+    .third{
+        
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        
     }
 }
